# capacitor-mqtt-quic

./: .gitignore  .npmignore  AnnadataCapacitorMqttQuic.podspec  IMPLEMENTATION_SUMMARY.md  MQTT5_CLIENT_COMPLIANCE.md  MQTT5_IMPLEMENTATION_COMPLETE.md  MQTT_VERSION_ANALYSIS.md  NGTCP2_IMPLEMENTATION_STATUS.md  NGTCP2_INTEGRATION_PLAN.md  PUBLISHING.md  Package.swift  README.md  annadata-capacitor-mqtt-quic-0.1.3.tgz  build-native.sh  capacitor.config.json  deps-versions.sh  package-lock.json  package.json  rollup.config.js  tsconfig.json
.swiftpm/xcode/xcuserdata/annadata.xcuserdatad/xcschemes/: xcschememanagement.plist
android/: NGTCP2_BUILD_INSTRUCTIONS.md  build-nghttp3.sh  build-ngtcp2.sh  build-openssl.sh  build-wolfssl.sh  build.gradle  capacitor.settings.gradle  gradle.properties  proguard-rules.pro  settings.gradle
android/app/: capacitor.build.gradle
android/app/src/main/assets/: capacitor.config.json  capacitor.plugins.json
android/src/main/assets/: mqttquic_ca.pem
android/src/main/cpp/: CMakeLists.txt  ngtcp2_jni.cpp
android/src/main/kotlin/ai/annadata/mqttquic/: MqttQuicPlugin.kt
android/src/main/kotlin/ai/annadata/mqttquic/client/: MQTTClient.kt
android/src/main/kotlin/ai/annadata/mqttquic/mqtt/: MQTT5Properties.kt  MQTT5Protocol.kt  MQTT5ReasonCodes.kt  MQTTProtocol.kt  MQTTTypes.kt
android/src/main/kotlin/ai/annadata/mqttquic/quic/: NGTCP2Client.kt  QuicClientStub.kt  QuicTypes.kt
android/src/main/kotlin/ai/annadata/mqttquic/transport/: QUICStreamAdapter.kt  StreamTransport.kt
android/src/test/kotlin/ai/annadata/mqttquic/mqtt/: MQTTProtocolTest.kt
docs/: ARCHITECTURAL_ANALYSIS.md  CAPACITOR_MQTT_QUIC_PRODUCTION_PLUGIN.md  CAPACITOR_VERSION_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  NGTCP2_IMPLEMENTATION_STATUS.md  NGTCP2_INTEGRATION_PLAN.md  P0_P1_CHANGELOG.md  PRODUCTION_PUBLISH_STEPS.md  PROJECT_OVERVIEW.md
ios/: AnnadataCapacitorMqttQuic.podspec  MqttQuicPlugin.podspec  NGTCP2_BUILD_INSTRUCTIONS.md  Package.swift  build-nghttp3.sh  build-ngtcp2.sh  build-openssl.sh  build-wolfssl.sh  create-xcframework.sh
ios/.swiftpm/xcode/xcuserdata/annadata.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/App/App/: capacitor.config.json
ios/App/App/public/: index.html
ios/Sources/MqttQuicPlugin/: MqttQuicPlugin.swift
ios/Sources/MqttQuicPlugin/Client/: MQTTClient.swift
ios/Sources/MqttQuicPlugin/MQTT/: MQTT5Properties.swift  MQTT5Protocol.swift  MQTT5ReasonCodes.swift  MQTT5ReasonCodes.swift.rej  MQTTProtocol.swift  MQTTTypes.swift
ios/Sources/MqttQuicPlugin/QUIC/: NGTCP2Bridge.h  NGTCP2Bridge.mm  NGTCP2Client.swift  QuicClientStub.swift  QuicTypes.swift  module.modulemap
ios/Sources/MqttQuicPlugin/Transport/: QUICStreamAdapter.swift  StreamTransport.swift
ios/Tests/: MQTTProtocolTests.swift
ios/include/wolfssl/: options.h
ios/install/openssl-ios/include/openssl/: configuration.h  opensslv.h  ssl.h
ios/install/openssl-ios/lib/ossl-modules/: legacy.dylib
ios/install/openssl-ios/lib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
src/: definitions.ts  index.ts  web.ts
